syntax = "proto3";

package user;

service UserService {
  rpc HandleClerkUserCreated (ClerkUserData) returns (ClerkWebhookResponse) {}
  rpc HandleClerkUserDeleted (ClerkUserData) returns (ClerkWebhookResponse) {}
  rpc HandleSubscriptionCreated (RevenueCatSubscriptionData) returns (SubscriptionCreatedResponse) {}
  rpc GetUserVendors (UserVendorData) returns (UserVendorsResponse) {}
}



// Service Function Types

message ClerkWebhookResponse {
    string message = 1;
}

message ClerkUserData {
    string id = 1;
} 

message RevenueCatSubscriptionData {
    string clerkUserId = 1;
    string providerId = 2;
    RevenueCatProviderData data = 3;
}

message SubscriptionCreatedResponse {
    string message = 1;
}

message UserVendorData {
    string userId = 1;
}

message UserVendorsResponse {
    repeated UserVendor vendors = 1;
}

// Helper Types
message UserVendor {
    string id = 1;
    string name = 2;
}

message ClerkWebhookEvent {
    string type = 1;
    string object = 2;
    ClerkUserData event = 3;
}

message RevenueCatProviderData {
    string transactionId = 1;
    string eventId = 2;
    string productId = 3;
}

message Empty {

}